Source/Alternet.UI.Pal/Api/FontDialog.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "FontDialog.h"
#include "Window.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API FontDialog* FontDialog_Create_()
{
    return MarshalExceptions<FontDialog*>([&](){
        return new FontDialog();
    });
}

ALTERNET_UI_API c_bool FontDialog_GetAllowSymbols_(FontDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAllowSymbols();
    });
}

ALTERNET_UI_API void FontDialog_SetAllowSymbols_(FontDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowSymbols(value);
    });
}

ALTERNET_UI_API c_bool FontDialog_GetShowHelp_(FontDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetShowHelp();
    });
}

ALTERNET_UI_API void FontDialog_SetShowHelp_(FontDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetShowHelp(value);
    });
}

ALTERNET_UI_API c_bool FontDialog_GetEnableEffects_(FontDialog* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetEnableEffects();
    });
}

ALTERNET_UI_API void FontDialog_SetEnableEffects_(FontDialog* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetEnableEffects(value);
    });
}

ALTERNET_UI_API int FontDialog_GetRestrictSelection_(FontDialog* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetRestrictSelection();
    });
}

ALTERNET_UI_API void FontDialog_SetRestrictSelection_(FontDialog* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetRestrictSelection(value);
    });
}

ALTERNET_UI_API Color_C FontDialog_GetColor_(FontDialog* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetColor();
    });
}

ALTERNET_UI_API void FontDialog_SetColor_(FontDialog* obj, Color value)
{
    MarshalExceptions<void>([&](){
        obj->SetColor(value);
    });
}

ALTERNET_UI_API char16_t* FontDialog_GetResultFontName_(FontDialog* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetResultFontName());
    });
}

ALTERNET_UI_API float FontDialog_GetResultFontSizeInPoints_(FontDialog* obj)
{
    return MarshalExceptions<float>([&](){
        return obj->GetResultFontSizeInPoints();
    });
}

ALTERNET_UI_API FontStyle FontDialog_GetResultFontStyle_(FontDialog* obj)
{
    return MarshalExceptions<FontStyle>([&](){
        return obj->GetResultFontStyle();
    });
}

ALTERNET_UI_API char16_t* FontDialog_GetTitle_(FontDialog* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetTitle());
    });
}

ALTERNET_UI_API void FontDialog_SetTitle_(FontDialog* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetTitle(ToOptional(value));
    });
}

ALTERNET_UI_API ModalResult FontDialog_ShowModal_(FontDialog* obj, Window* owner)
{
    return MarshalExceptions<ModalResult>([&](){
        return obj->ShowModal(owner);
    });
}

ALTERNET_UI_API void FontDialog_SetRange_(FontDialog* obj, int minRange, int maxRange)
{
    MarshalExceptions<void>([&](){
        obj->SetRange(minRange, maxRange);
    });
}

ALTERNET_UI_API void FontDialog_SetInitialFont_(FontDialog* obj, GenericFontFamily genericFamily, const char16_t* familyName, float emSizeInPoints, FontStyle style)
{
    MarshalExceptions<void>([&](){
        obj->SetInitialFont(genericFamily, ToOptional(familyName), emSizeInPoints, style);
    });
}